# Calculator

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
Python/: calculator.py  pyproject.toml  test_calculator.py
Rust/: Cargo.toml
Rust/src/: lib.rs  main.rs
Rust/tests/: calculator_tests.rs
web/: next.config.ts  package.json
web/src/app/: layout.tsx  page.tsx  pyodide.d.ts
web/src/app/api/race/: route.ts
