[project]
name = "calculator"
version = "0.1.0"
description = "Simple Calculator project"
requires-python = ">=3.12"
dependencies = [
    "yamlfix>=1.19.1",
    "yamllint>=1.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.setuptools]
py-modules = ["calculator"]

